增加了基础材质

--- a/note/地图系统 设计.md
+++ b/note/地图系统 设计.md
@@ -1,18 +1,33 @@
-# map 文件初版
-## 一、文件结构
-1.recarea类
+# 地图系统设计
+
+*2025年3月22日 刘骐源*
+
+----
+
+### 一、文件结构
+
+> |---- maps/ <br>
+|--------map.cpp / map.h *地图基类及其实现* <br>
+
++ recarea类<br>
 包含长宽以及绝对坐标（为负值时表示坐标未定义）
 只拥有获取成员和设置成员的方法，也许可以用作碰撞判定等其他用途。
-2.recmap类
+
++ recmap类 <br>
 继承irearea类，拥有总计时`timekeeper`,计时器`time`,轮次`turn`,用于加载动态地图（如海浪，风吹草动），除get和set函数，`reset_time`重置计时器 `add_recg`对vector进行包装。`layer`为图层，0垫底，数字大者叠在上方。
-3.recgraphic类
+
++ recgraphic类 <br>
 图像类 储存取样块左上角坐标和地图快长宽以及路径。
-4.recmapset_top类
+
++ recmapset_top类 <br>
 组织地图块，形成完整地图，包含规定长宽（2.3.类长宽由其决定）地图最大纵向和横向recmap数（`maxh`和`maxw`）和最大图层数（这个可能会优化掉）
-5.mywin类
+
++ mywin类 <br>
 一个建议窗口，仅用来确定加载的recgraphic数量，可能会改。
-## 二、异常处理
+
+### 二、异常处理
 未做，暂时全部假定可行返回true
-## 三、地图存储格式
+
+### 三、地图存储格式
 第一行为4.类的内容，依次为规定长，宽，最大纵向，横向地图块数量，最大图层。
 第二行开始 第一个数字代表第n个地图块（n=y*maxw+x）相当于二维数组简化成一维数组了，第二个为图层，第三个为`timekeeper`,第四，五个为素材的左上角坐标x，y，最后为路径
